--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p>&amp; Hello world. This is my first website!</p>
   <p>Instructions: rewrite this page by adding a few sentences about yourself. Follow the instructions in README.md to turn it in.</p>
   <p>My name is Jon.</p>
-  <p>I live on the west coast.</p>
+  <p>I live on the West Coast.</p>
   <p>My real first website was a trivial Geocities page that I wrote in plain Notepad back in the previous century. A lot has changed since then.</p>
 </body>
 </html>
